objects/Migration_Job_Rule_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>Is_Base__c</fullName>
        <formula>IF(Migration_Job__r.Base_Object_Migration_Rule__c = Migration_Rule__r.Id, true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Base</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Job__c</fullName>
        <label>Migration Job</label>
        <referenceTo>Migration_Job__c</referenceTo>
        <relationshipLabel>Migration Job Rule Hierarchies</relationshipLabel>
        <relationshipName>Migration_Job_Rule_Hierarchies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Migration_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migration Rule</label>
        <referenceTo>Migration_Rule__c</referenceTo>
        <relationshipLabel>Migration Job Rule Hierarchies</relationshipLabel>
        <relationshipName>Migration_Job_Rule_Hierarchies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>DML Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <formula>Migration_Rule__r.Source_Object__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Object__c</fullName>
        <formula>Migration_Rule__r.Target_Object__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Object</label>
        <type>Text</type>
    </fields>
    <label>Migration Job Rule Hierarchy</label>
    <nameField>
        <displayFormat>MH-{00000}</displayFormat>
        <label>Migration Job Rule Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Job Rule Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>